@@ -33,7 +33,7 @@
       },
       "runtime" : {
          "requires" : {
-            "Math::BigInt" : "1.999713",
+            "Math::BigInt" : "1.999714",
             "Math::BigInt::Calc" : "1.999713",
             "XSLoader" : "0",
             "perl" : "5.006"
@@ -41,6 +41,6 @@
       }
    },
    "release_status" : "stable",
-   "version" : "0.39",
+   "version" : "0.40",
    "x_serialization_backend" : "JSON::PP version 2.27300"
 }
