@@ -19,9 +19,9 @@ no_index:
     - t
     - inc
 requires:
-  Math::BigInt: '1.999713'
+  Math::BigInt: '1.999714'
   Math::BigInt::Calc: '1.999713'
   XSLoader: '0'
   perl: '5.006'
-version: '0.39'
+version: '0.40'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.016'
