@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 6b0da06626f25acc720197e365b41be385a0650f CHANGES
+SHA1 18b2c198f876f7f56ccd918a16dc07ecd512550e CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
 SHA1 49fd6e66d900cc6b6ca04191fe8fcb3f19603d62 FastCalc.xs
 SHA1 c00af0af44a912b550a7e86cd14fbaf0fcc421fc MANIFEST
 SHA1 b84f4d19c93c52aa32e5145cabce4f7e1ccb85a9 MANIFEST.SKIP
-SHA1 b2cda8162f4f3d3f04debad702d1a424d1c40f0d META.json
-SHA1 18123a1d0f5fd9783280982142b1b23a8062d084 META.yml
-SHA1 eb69c20599d9dd15cce0bb453a48978a316a658b Makefile.PL
+SHA1 c0f4017f562f14af6a9183315a326f5f717eb81b META.json
+SHA1 736aaff87c708e508349a54d8e55b109ef18afec META.yml
+SHA1 372d3cdb27453922748dee4f830d1fbd07046702 Makefile.PL
 SHA1 e3642759d709f62d10e99d8480e0404ec48965c7 README
 SHA1 280c4f82fc9e7322fe2bbed7e5f595bfe9fe7783 TODO
 SHA1 bce3c51bb369419603298064b78e14077b93af66 inc/Module/Install.pm
@@ -32,16 +32,16 @@ SHA1 76efdca3603159e0ae0e18f19fe72a0211a69529 inc/Module/Install/Makefile.pm
 SHA1 2e33e87882d60db3913da6284dd5295e5315e18a inc/Module/Install/Metadata.pm
 SHA1 c830b819e61bda5eca077c6291293bba61b3b9f2 inc/Module/Install/Win32.pm
 SHA1 cb52b9d6f88d512d448a6f35ed0af0d1201a134b inc/Module/Install/WriteAll.pm
-SHA1 bd226a7009fe116a73042d07de96ad6d29cad5ac lib/Math/BigInt/FastCalc.pm
+SHA1 baad9b3f2d55f84dbcc7151c37a06ebe1faf2d35 lib/Math/BigInt/FastCalc.pm
 SHA1 385cc7ed3bf3e6290640b9880445ca9a3dea629e t/00sig.t
 SHA1 2c720454ea4a111cb2e554a869e66234fafb40a8 t/01load.t
 SHA1 b2ed9206ca5b69ec3b8bbf850bf4b6dfde518e7e t/02pod.t
 SHA1 ae4a4efc6c33e300fb247439451ca2f43ca14014 t/03podcov.t
-SHA1 65170a9a6cbdeb6ecb2ee3785be8180a3bab8b79 t/bigfltpm.inc
-SHA1 494438bb50d25dcc7e7a6af0412f1c678d97399c t/bigfltpm.t
+SHA1 9b9b6a30c74d5134a6ad4a04b71732d9802dfd64 t/bigfltpm.inc
+SHA1 c3526a51c2d86dc325c5149a2cd88aa775fddc36 t/bigfltpm.t
 SHA1 67d03610a42a11a2d8f73358441a8fab18b12103 t/bigintfc.t
-SHA1 15288bedbebc8ad9d6d40b9cf5c1e0dcbada8ac4 t/bigintpm.inc
-SHA1 f22fa9e3b261542e32f7194e38b35c83fadb2894 t/bigintpm.t
+SHA1 8196aa86f15868a91cde4ca849b1035cfee856dd t/bigintpm.inc
+SHA1 a4322a58c29ce2a5686d37424dad4b9eaeb84bce t/bigintpm.t
 SHA1 9914c24f7ac04c96490e0f43e9c8a3f12b565610 t/bootstrap.t
 SHA1 38bf0f7b9949bf4eb746831ecde91841f0118931 t/leak.t
 SHA1 41bbc8a406b4685c932fd36f20b085ea2f04faf1 t/mbi_rand.t
@@ -50,11 +50,11 @@ SHA1 350845cb3a54a989f32d924ad1e602b4e6788fb5 t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJWhHEBAAoJEGcmPl2fr166UNIH/AhfOf840qHhy2/mh1r33BRz
-xQpRG6LG86wBZ4OLwqjt3NuH2TKuwiOs1t3ytgO5jsc4apidnlbc2YdBqzRLsFld
-TzKoDnj4/BHvFVllEHh5IU+uCBmaMGzzDkFbUW6l2NZbTDMhya+KzpEQ+ozg6f+S
-NQMOo3RAvfpJQHe0PSZRXPjzsEuuox/6vZnoML2hJGSuN70hMVl9vrcZEAkgfRWX
-t5sCqrD15dqecy7wpmpkxPrgKomkufjSz0wPCYKAPAsmQ1A13KuhOsvjbiDLzSf4
-+X2vbaNp7KQLZM+jTlp2LywhH4eKF4uYI9pEoUiSsJ1H5pcYpWNVvw7mMdGLjAY=
-=7OK8
+iQEcBAEBAgAGBQJWiRL+AAoJEGcmPl2fr166rzQH/RLhjhYGCMDulwCRrjmln92a
+7d8xU5i5Nyd6ldmru5gB6pWO+v/1oU7Bd5AYgoJ+XB4UsyTlW6BV2W/hWe1dNtTZ
+dT3xSEMWjKKjmKU/s7PTZvf4JzJDMnbSl6/89wttEHnzOrGb9Ai0r755gEaipWi1
+TnmGhwGjXQKMDcJEEOIU+KTRrHoozS9mBSIqGvPDpy5oxEtTk05o4PZw3pQB8jPv
+DczUZ973p5ZRc/C7kGoWjGVsuJC4QtakWNCWd6uzDn9vDnsuh0JJfibTFgssaaiB
+5b4MbIHJRoxVxMDCCEdgmFQfKpmVGRz30Rj7uQh0cxu6m9Knn/Cbkyti56/c3Ps=
+=M333
 -----END PGP SIGNATURE-----
