@@ -6,7 +6,7 @@ use warnings;
 
 use Math::BigInt::Calc 1.999706;
 
-our $VERSION = '0.39';
+our $VERSION = '0.40';
 
 ##############################################################################
 # global constants, flags and accessory
